# EuraliOS

./: .gitmodules  Cargo.toml  LICENSE  README.org  makefile  x86_64-euralios.json
.cargo/: config.toml
arp/: Cargo.toml  README.org
arp/src/: main.rs
doc/: kernel_api.org  memory.org
doc/journal/: 01-interrupts-processes.org  02-userspace.org  03-memory.org  04-more-syscalls.org  05-memory-returns.org  06-user-memory.org  07-file-descriptors.org  07-ipc.org  08-faster-ipc.org  09-message-sending.org  10-stdlib.org  11-messages.org  12-devices.org  13-return-to-sender.org  14-network.org  15-messages.org  15-tcp-stack.org  16-arp.org  17-tcp-stack.org  18-gopher.org  18-vfs.org  19-timing.org  20-dns.org  21-vga.org  22-ramdisk.org  23-keyboard.org  24-directories.org  24-text-editor.org  25-directories.org  25-multiple-users.org  26-multiple-users.org  27-servers.org  27-text-editor.org  27-virtio.org  xx-shell.org  xx-usb.org  xx-wifi.org
edit/: Cargo.toml  README.org
edit/src/: main.rs
euralios_std/: Cargo.toml  README.org
euralios_std/src/: console.rs  debug.rs  env.rs  ffi.rs  fs.rs  io.rs  lib.rs  memory.rs  message.rs  net.rs  path.rs  ports.rs  server.rs  sys.rs  syscalls.rs  thread.rs  time.rs
gopher/: Cargo.toml  README.org
gopher/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
init/: Cargo.toml  README.org
init/src/: main.rs
kernel/: Cargo.toml  README.org
kernel/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  message.rs  process.rs  rendezvous.rs  serial.rs  syscalls.rs  time.rs  vfs.rs  vga_buffer.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  kernel_info.rs
kernel/tests/: stack_overflow.rs
keyboard/: Cargo.toml  README.org
keyboard/src/: main.rs
login/: Cargo.toml  README.org
login/src/: main.rs
pci/: Cargo.toml  README.org  build.rs
pci/src/: device.rs  main.rs  ports.rs
ramdisk/: Cargo.toml
ramdisk/src/: main.rs
rtl8139/: Cargo.toml  README.org
rtl8139/src/: main.rs
shell/: Cargo.toml
shell/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  serial.rs  syscalls.rs  vga_buffer.rs
system_test/: Cargo.toml
system_test/src/: main.rs
tcp/: Cargo.toml  README.org
tcp/src/: dhcp.rs  dns.rs  main.rs
tests/: heap_allocation.rs  interrupt_wrap.rs
timing_test/: Cargo.toml  README.org
timing_test/src/: main.rs
vga/: Cargo.toml
vga/src/: main.rs
vga_driver/: Cargo.toml  README.org
vga_driver/src/: main.rs
virtio_net/: Cargo.toml  README.org
virtio_net/src/: main.rs
