[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
object = { version = "0.27.1", default-features = false, features = ["read"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
#run-args = ["-nic", "user,model=rtl8139,hostfwd=tcp::5555-:23"]
run-args = ["-netdev", "user,id=u1", "-device", "rtl8139,netdev=u1", "-object", "filter-dump,id=f1,netdev=u1,file=dump.dat"]

test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
             "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)
